--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies" : {
+    "jelly-proxy" : "latest"
+  , "send" : "0.1.1"
+  },
   "repository": "",
   "author": "Peter Braden",
   "license": "BSD",
